Fix chatbot z-index issue

--- a/src/styles/chatbot.scss
+++ b/src/styles/chatbot.scss
@@ -37,6 +37,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  z-index:999;
 }
 
 .chatbot-header {
